--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <section id="about">
                 <h2>About Me</h2>
                 <p>
-                    I am a PhD student at <strong>University of Maryland</strong>, advised by <a href="https://user.eng.umd.edu/~danadach/"><strong>Professor Dana Dachman-Soled</strong></a>. 
+                    I am a PhD student at <strong>University of Maryland</strong>, advised by Professor <a href="https://user.eng.umd.edu/~danadach/"><strong>Dana Dachman-Soled</strong></a>. 
                     My research focuses on <strong>reinforcement learning and multi-agent systems, specifically in developing robust AI for complex, real-world coordination tasks.</strong> 
                     Previously, I received my M.S. from <strong>State Tech University</strong>.
                     When I'm not in the lab, I enjoy hiking and photography.
@@ -179,7 +179,7 @@
             <section id="research">
                 <h2>Research Interests</h2>
                 <p>
-                    My research interests lie at the intersection of <strong>applied cryptography</strong> and <strong>secure systems</strong>. I am particularly focused on developing secure 
+                    My research interests are in <strong>cryptography</strong>. I am particularly focused on developing secure 
                     and private <strong>machine learning</strong> models using advanced techniques like <strong>Fully Homomorphic Encryption (FHE)</strong> and <strong>Differential Privacy (DP)</strong>. 
                     My work also extends to practical security challenges, including building novel <strong>secure authentication systems</strong> and exploring the security of <strong>XR (AR/VR)</strong> environments.
                 </p>
