--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         /* --- Column 2: Navigation --- */
         .nav-right {
             text-align: right;
+            flex-grow: 1;
         }
         .nav-right a {
             display: block;
@@ -147,7 +148,7 @@
                 
                 <div class="contact-info">
                     <h1>Yvonne Zhou</h1>
-                    <p>PhD Candidate, Computer Science</p>
+                    <p>PhD Student, Computer Science</p>
                     <p>University of Maryland</p>
                     <p><strong>Email:</strong> skyzhou@umd.edu</p>
                     <!-- <p><strong>Phone:</strong> +1 (301) 326-7877</p> </div> -->
@@ -242,7 +243,7 @@
 
         <footer>
             <p>
-                <a href="#" target="_blank">Google Scholar</a> | 
+                <a href="https://scholar.google.com/citations?hl=en&user=6GNuAT4AAAAJ" target="_blank">Google Scholar</a> | 
                 <a href="#" target="_blank">LinkedIn</a> | 
                 <a href="https://github.com/evelynreed" target="_blank">GitHub</a>
             </p>
