--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 <a href="#research">Research</a>
                 <a href="#projects">Projects</a>
                 <a href="#publications">Publications</a>
-                <a href="resume.pdf" target="_blank">Download CV</a>
+                <a href="resume_2510.pdf" target="_blank">Download CV</a>
             </nav>
 
         </header>
