--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
                 
                 <div class="contact-info">
                     <h1>Yvonne Zhou</h1>
+                    <p>under construction</p>
                     <p>PhD Student, Computer Science</p>
                     <p>University of Maryland</p>
                     <p><strong>Email:</strong> skyzhou@umd.edu</p>
