--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
                     <p>PhD Student, Computer Science</p>
                     <p>University of Maryland</p>
                     <p><strong>Email:</strong> skyzhou@umd.edu</p>
-                    <!-- <p><strong>Phone:</strong> +1 (301) 326-7877</p> </div> -->
+                    <!-- <p><strong>Phone:</strong> +1 (301) 326-7877</p> -->
+                </div> 
             </div>
 
             <nav class="nav-right">
