--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
             align-items: center;
         }
         .profile-pic {
-            width: 150px;
-            height: 150px;
+            width: 250px;
+            height: 250px;
             border-radius: 50%;
             object-fit: cover;
             margin-right: 20px;
@@ -173,9 +173,7 @@
                 <h2>About Me</h2>
                 <p>
                     I am a PhD student at <strong>University of Maryland</strong>, advised by Professor <a href="https://user.eng.umd.edu/~danadach/"><strong>Dana Dachman-Soled</strong></a>. 
-                    My research focuses on <strong>reinforcement learning and multi-agent systems, specifically in developing robust AI for complex, real-world coordination tasks.</strong> 
-                    Previously, I received my M.S. from <strong>State Tech University</strong>.
-                    When I'm not in the lab, I enjoy hiking and photography.
+                    My research focuses on <strong>cryptography</strong>.
                 </p>
             </section>
 
