--- a/game/mastermind.html
+++ b/game/mastermind.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Number Guess Game</title>
+    <title>Mastermind</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
@@ -146,7 +146,7 @@
           *************************************************
         -->
         <div id="setup-screen">
-            <h1>Number Guess</h1>
+            <h1>Mastermind</h1>
             <label for="n-input">How many numbers (5-20)?</label>
             <input type="number" id="n-input" value="5" min="5" max="20">
             <button id="start-button" style="margin-top: 20px;">Start Game</button>
