--- a/game.html
+++ b/game.html
@@ -90,7 +90,7 @@
 
     <div class="container">
         
-        <a href="index.html" class="back-link">&larr; Back to Portfolio</a>
+        <a href="index.html" class="back-link">&larr; Back to Yvonne</a>
         
         <h1>Game Arcade</h1>
 
