--- a/game.html
+++ b/game.html
@@ -100,7 +100,11 @@
             
             <div class="game-info">
                 <h3>Mastermind</h3>
-                <p>The classic "Bulls and Cows" logic game. Guess the secret code!</p>
+                <p>
+                    Test your logic! The computer generates a secret code of unique numbers. Your mission is to guess the sequence. After each guess, you'll get clues:
+                    <strong>'A'</strong> for a correct number in the right spot, and
+                    <strong>'B'</strong> for a correct number in the wrong spot.
+                </p>
             </div>
             
             <a href="game/mastermind.html" class="game-button">Start</a>
