--- a/game.html
+++ b/game.html
@@ -96,7 +96,7 @@
 
         <div class="game-entry">
             
-            <img src="image/mastermind_preview.png" alt="Mastermind Game" class="game-image">
+            <img src="game/mastermind_preview.png" alt="Mastermind Game" class="game-image">
             
             <div class="game-info">
                 <h3>Mastermind</h3>
