--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                 <a href="#projects">Projects</a>
                 <a href="#publications">Publications</a>
                 <a href="resume_2510.pdf" target="_blank">Download CV</a>
-                <a href="game.html">Game</a>
+                <a href="game.html">Snack Break</a>
             </nav>
 
         </header>
