--- a/game/mastermind.html
+++ b/game/mastermind.html
@@ -151,7 +151,7 @@
 
     <div class="container">
         
-        <a href="../game.html" class="back-link">&larr; Back to Arcade</a>
+        <a href="../game.html" class="back-link">&larr; Back to 🥨</a>
 
         <!-- PHASE 1: SETUP SCREEN -->
         <div id="setup-screen">
