--- a/index.html
+++ b/index.html
@@ -226,10 +226,10 @@
                     <p class="venue">
                         *arXiv preprint arXiv:2402.04375, 2024*
                         [ <a href="https://arxiv.org/abs/2402.04375" target="_blank">arXiv</a> ] 
-                        [ <a href="#" target="_blank">Code</a> ]
+                        [ <a href="https://github.com/DPML-syn/MarginalPreserving_DP_SyntheticData" target="_blank">Code</a> ]
                     </p>
                 </div>
-
+<!-- 
                 <div class="item-entry">
                     <p class="title">Ethical Frameworks for Multi-Agent Decision Making</p>
                     <p class="authors">David Lee, <strong>Yvonne Zhou</strong>, Prof. Sarah Jenkins</p>
@@ -237,7 +237,7 @@
                         In *Journal of Artificial Intelligence Research (JAIR), 2023*.
                         [ <a href="#">PDF</a> ]
                     </p>
-                </div>
+                </div> -->
             </section>
 
         </main>
