--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                         <p>
                             The resulting DP synthetic data enables training of any ML model with <b>privacy guarantees by design</b>, 
                             without modifying the learning algorithm. We theoretically bound the excess empirical risk 
-                            between models trained on real and DP synthetic data (≤O(1/(d–1)) for logistic regression) 
+                            between models trained on real and DP synthetic data 
                             and empirically show less than 1% accuracy loss on multiple public datasets. 
                             This approach offers strong privacy protection, reusable synthetic data, and high model utility— 
                             a practical alternative to traditional training-based DP methods such as DP-SGD and PATE.
