--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                         </div>
                         
                         <div style="flex: 1;">
-                        <p>
+                        <p style="margin-top: 0;">
                             This project develops a preprocessing-based framework for <b>Differentially Private Machine Learning (Pre-DPML)</b>,
                             where models are trained on <b>synthetic data</b> that safely replicates key statistical properties of sensitive datasets. 
                             Instead of adding noise during model training, we adopt a <i>select–measure–generate</i> workflow: 
