--- a/game/mastermind.html
+++ b/game/mastermind.html
@@ -174,7 +174,7 @@
 </head>
 <body>
 
-<a href="../game.html" class="back-link">&larr; Back to Snack Break</a>
+<a href="../game.html" class="back-link">&larr; Back to 🥨</a>
 
 <h1>Mastermind Mini Game</h1>
 
