--- a/index.html
+++ b/index.html
@@ -248,9 +248,9 @@
                                 and pleasant user experience with strong cryptographic protection for immersive applications.
                             </p>
                             <p class="links">
-                                [ <a href="path/to/annotated-838C%20Final%20Project%20Report.pdf" target="_blank">See Project Report</a> ] 
+                                <!-- [ <a href="path/to/838C_Final_Report.pdf" target="_blank">See Project Report</a> ]  -->
                                 [ <a href="https://www.youtube.com/watch?v=edZ-AGMHNII" target="_blank">Video Demo</a> ]
-                                [ <a href="https://github.com/YujianZhao-080910/838C-Final-Project-Wall" target="_blank">GitHub</a> ]
+                                <!-- [ <a href="https://github.com/YujianZhao-080910/838C-Final-Project-Wall" target="_blank">GitHub</a> ] -->
                             </p>
                         </div>
                         
