--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                             </p>
                             <p class="links">
                                 <!-- [ <a href="path/to/838C_Final_Report.pdf" target="_blank">See Project Report</a> ]  -->
-                                [ <a href="https://www.youtube.com/watch?v=edZ-AGMHNII" target="_blank">Video Demo</a> ]
+                                [ <a href="https://youtu.be/obv9mejClt4" target="_blank">Video Demo</a> ]
                                 <!-- [ <a href="https://github.com/YujianZhao-080910/838C-Final-Project-Wall" target="_blank">GitHub</a> ] -->
                             </p>
                         </div>
