--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                         <div style="flex: 0 0 auto;">
                             <img src="image/dp_synthetic_data_concept.png" 
                                  alt="Conceptual Diagram: Private Data to Public ML Model with DP Synthetic Data" 
-                                 style="max-width: 250px; height: auto; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
+                                 style="max-width: 250px; height: auto; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); float: left; margin-left: 20px; margin-bottom: 10px;">
                         </div>
                         
                     <div style="flex: 1;">
