--- a/game.html
+++ b/game.html
@@ -116,7 +116,7 @@
             <img src="game/n-back_preview.png" alt="N-Back Game" class="game-image">
             
             <div class="game-info">
-                <h3>Mastermind</h3>
+                <h3>N-Back</h3>
                 <p>
                     Challenge your memory and attention with the N-Back game! A grid of size <strong>L × L</strong> will display a sequence of highlighted positions. Your task is to remember the positions from <strong>N steps back</strong> in the sequence.  
                     <br><br>
